--- a/_assets/ejs/parts/_p-model.ejs
+++ b/_assets/ejs/parts/_p-model.ejs
@@ -1,15 +1,15 @@
 
-  <section class="p-merit">
+  <section class="p-model">
     <div class="l-inner">
-      <div class="p-merit__inner">
+      <div class="p-model__inner">
         <h2 class="c-common-title font-color3">
           ご参加いただくメリット
         </h2>
 
-        <div class="p-merit__contents">
-          <div class="p-merit__chiyoda">
+        <div class="p-model__contents">
+          <div class="p-model__chiyoda">
             <%# メリット %>
-            <div class="p-merit__value p-value">
+            <div class="p-model__value p-value">
               <h3 class="c-common-title font-color2">
                 お得で簡単、再エネ切替え！
               </h3>
@@ -44,14 +44,14 @@
             </div>
 
             <%# STEP %>
-            <div class="p-merit__step p-step">
+            <div class="p-model__step p-step">
               <h3 class="p-step__title">
                 再エネ切替えまでの4STEP
               </h3>
               <%- include('./_p-step__list') %>
             </div>
 
-            <div class="p-merit__copy c-ecycle-copy">
+            <div class="p-model__copy c-ecycle-copy">
               <p>
                 <img src="../img/svg/logo.svg" alt="e.cycle">
                 の入札に参加して
