--- a/_assets/ejs/index.ejs
+++ b/_assets/ejs/index.ejs
@@ -4,9 +4,14 @@
 
 
 <main>
+  <!-- MV -->
+  <%- include('./parts/_p-mv') %>
+
+  <!-- MV -->
+  <%- include('./parts/_p-lead') %>
 
   <!-- ご参加いただくメリット -->
-  <!-- <%- include('./parts/_p-merit') %> -->
+  <%- include('./parts/_p-model') %>
 
   <!-- ご参加いただくメリット -->
   <%- include('./parts/_p-merit') %>
@@ -20,4 +25,4 @@
 </main>
 
 
-<%- include('./common/_footer', {pageId:pageId }) %>
+<%- include('./common/_footer') %>
