--- a/_assets/ejs/parts/_p-merit.ejs
+++ b/_assets/ejs/parts/_p-merit.ejs
@@ -1,3 +1,90 @@
+<div class="section">
+
+  <div class="tabBox">
+    <div class="tabArea">
+      <div class="one_tab">
+        <a href="#tab01"><span class="tab_inner">Tab1</span></a>
+      </div>
+      <div class="one_tab">
+        <a href="#tab02"><span class="tab_inner">Tab2</span></a>
+      </div>
+      <div class="one_tab">
+        <a href="#tab03"><span class="tab_inner">Tab3</span></a>
+      </div>
+    </div>
+  </div><!-- /.tabBox -->
+
+  <div class="contents">
+    
+    <div id="tab01" class="tab_main">
+      <div class="innerArea">Tab1 text</div>
+    </div><!-- /#tab01 -->
+    
+    <div id="tab02" class="tab_main">
+      <div class="innerArea">Tab2 text</div>
+    </div><!-- /#tab02 -->
+    
+    <div id="tab03" class="tab_main">
+      <div class="innerArea">Tab3 text</div>
+    </div><!--#tab03-->
+    
+  </div><!--contents-->
+
+  <!-- ▼Tab under▼ -->
+  <div class="tabBox">
+    <div class="tabArea bottom">
+      <div class="one_tab">
+        <a href="#tab01"><span class="tab_inner">Tab1</span></a>
+      </div>
+      <div class="one_tab">
+        <a href="#tab02"><span class="tab_inner">Tab2</span></a>
+      </div>
+      <div class="one_tab">
+        <a href="#tab03"><span class="tab_inner">Tab3</span></a>
+      </div>
+    </div>
+  </div><!-- /.tabBox -->
+
+  <p class="_a"><a href="https://125naroom.com/web/2854" target="_blank" class="link">View the note</a></p>
+</div>
+
+
+<!-- <div class="tab">
+  <ul class="tab-list">
+    <li class="tab-menu js-tab current">タブ1</li>
+    <li class="tab-menu js-tab">タブ2</li>
+    <li class="tab-menu js-tab">タブ3</li>
+  </ul>
+  <ul class="tab-list">
+    <li class="tab-menu js-tab current">タブ1</li>
+    <li class="tab-menu js-tab">タブ2</li>
+    <li class="tab-menu js-tab">タブ3</li>
+  </ul> -->
+  <!-- <div class="content-group">
+    <div class="content-box js-content">
+      <img
+        src="https://junpei-sugiyama.com/wp-content/uploads/2021/01/dog01.jpg"
+        alt=""
+      />
+    </div>
+    <div class="content-box js-content">
+      <img
+        src="https://junpei-sugiyama.com/wp-content/uploads/2021/01/dog02.jpg"
+        alt=""
+      />
+    </div>
+    <div class="content-box js-content">
+      <img
+        src="https://junpei-sugiyama.com/wp-content/uploads/2021/01/dog03.jpg"
+        alt=""
+      />
+    </div>
+  </div> -->
+</div>
+
+
+
+
 
   <section class="p-merit">
     <div class="l-inner">
