--- a/_assets/scss/object/project/_p-step.scss
+++ b/_assets/scss/object/project/_p-step.scss
@@ -23,6 +23,7 @@ p-step
   margin: 7rem auto 0;
   padding: 4rem;
   width: 54rem;
+  max-width: 100%;
   border: 2px solid $border-color1;
   border-radius: 20px;
   box-sizing: border-box;
