--- a/_assets/scss/setting/_setting.scss
+++ b/_assets/scss/setting/_setting.scss
@@ -29,6 +29,8 @@ $bg-color3:#E5F5F3;
 $bg-color4:#D8D8D8;
 $bg-color5:#ECECEC;
 $border-color1:#009E8C;
+$border-color2:#D8D8D8;
+$border-color3:#FFFFFF;
 // 共通余白設定
 $padding-pc:25px;
 $padding-sp:20px;
