--- a/_assets/scss/object/project/_p-merit.scss
+++ b/_assets/scss/object/project/_p-merit.scss
@@ -1,12 +1,124 @@
 @use '../..//mixin/mixin' as *;
 @use '../../setting/setting' as *;
 
+
+
+
+.tabBox .tabArea {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.tabBox .tabArea .one_tab {
+  width: 32.5%;
+}
+.tabBox .tabArea .one_tab a {
+  display: block;
+  text-decoration: none;
+  transition-duration: 0.3s;
+  text-align: center;
+  color: #fff;
+}
+.tabBox .tabArea .one_tab a:hover {
+  opacity: 0.7;
+  text-decoration: none;
+}
+.tabBox .tabArea .one_tab .tab_inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  transition-duration: 0.3s;
+}
+.tabBox .tabArea .one_tab:nth-child(1) .tab_inner {
+  background-color: #94ad73;
+}
+.tabBox .tabArea .one_tab:nth-child(2) .tab_inner {
+  background-color: #e6de6b;
+}
+.tabBox .tabArea .one_tab:nth-child(3) .tab_inner {
+  background-color: #e8a48b;
+}
+.tabBox .tabArea .one_tab a.select .tab_inner {
+  height: 80px;
+}
+.tabBox .tabArea.bottom {
+  align-items: flex-start;
+}
+.contents .tab_main {
+  display: none;
+  padding: 50px 25px;
+  text-align: center;
+  min-height: 280px;
+  border: 2px solid #94ad73;
+  transition-duration: 0.3s;
+}
+.tab_main.is_show {
+  display: block;
+}
+.tab_main:nth-child(1).is_show {
+  border: 2px solid #94ad73;
+}
+.tab_main:nth-child(2).is_show {
+  border: 2px solid #e6de6b;
+}
+.tab_main:nth-child(3).is_show {
+  border: 2px solid #e8a48b;
+}
+
+
+
+
+
+// .tab {
+//   margin-left: auto;
+//   margin-right: auto;
+//   margin-top: 30px;
+//   max-width: 300px;
+//   width: 100%;
+// }
+// .tab-list {
+//   display: flex;
+// }
+// .tab-menu {
+//   align-items: center;
+//   background-color: #ccc;
+//   color: #fff;
+//   cursor: pointer;
+//   display: flex;
+//   flex-grow: 1;
+//   height: 50px;
+//   justify-content: center;
+// }
+// .tab-menu.current {
+//   background-color: #85746c;
+// }
+// .content-box {
+//   background-color: #ccc;
+//   display: none;
+//   max-width: 500px;
+//   width: 100%;
+// }
+// .content-box img {
+//   display: block;
+//   height: auto;
+//   width: 100%;
+// }
+
+
+
+
+
 /* --------------------------------
 p-merit
 ----------------------------------- */
 
 .p-merit__inner{
   width: 62rem;
+  max-width: 100%;
   margin: 0 auto;
 }
 
