--- a/_assets/scss/object/project/_p-partner.scss
+++ b/_assets/scss/object/project/_p-partner.scss
@@ -15,6 +15,8 @@ p-partner
 
 .p-partner__textbox{
   width: 38rem;
+  max-width: 100%;
+
 }
 
 .p-partner__copy{
@@ -29,6 +31,7 @@ p-partner
 .p-partner__img{
   position: relative;
   width: 81.8rem;
+  max-width: 100%;
   height: 61rem;
   margin-left: -25.8rem;
 }
