--- a/_assets/scss/object/project/_p-value.scss
+++ b/_assets/scss/object/project/_p-value.scss
@@ -13,6 +13,7 @@ p-value
   margin: 11rem auto 0;
   padding: 4rem 8rem;
   width: 62rem;
+  max-width: 100%;
   // border: 2px solid $border-color1;
   border-radius: 20px;
   box-sizing: border-box;
@@ -26,6 +27,7 @@ p-value
   left: 50%;
   transform: translateX(-50%);
   width: 30rem;
+  max-width: 100%;
   height: 10rem;
   background-repeat: no-repeat;
 }
