--- a/_assets/ejs/common/_footer.ejs
+++ b/_assets/ejs/common/_footer.ejs
@@ -14,7 +14,7 @@
         </ul>
       </nav>
         <div class="p-footer__textbox">
-          <p>※本事業は株式会社まち未来製作所と千代田区が連携協定を締結し実施しています
+          <p>※本事業は株式会社まち未来製作所と<br class="u-hidden-pc">千代田区が連携協定を締結し実施しています
           </p>
           <p>
             <small>
@@ -24,11 +24,15 @@
         </div>
     </div>
   </div>
+  <div class="p-request__img"></div>
 </footer>
-
-<div id="pagetop" class="c-pagetop"><a href="#wrapper"><img src="../../img/svg/arrow-down-solid.svg" alt="">Top</a>
+<div id="pagetop" class="c-pagetop">
+  <a href="#wrapper">
+  <!-- <img src="../../img/svg/arrow-down-solid.svg" alt=""> -->
+  <span class="c-pagetop__arrow"></span>
+  Top</a>
 </div>
-
+</div>
 
 <script src="/js/lib/svgxuse.min.js"></script>
 <script src="/js/lib/jquery-3.6.0.min.js"></script>
