--- a/_assets/ejs/index.ejs
+++ b/_assets/ejs/index.ejs
@@ -2,12 +2,13 @@
 
 <%- include('./common/_header', {pageId:pageId }) %>
 
+<%- include('./parts/_p-modal') %>
 
 <main>
   <!-- MV -->
   <%- include('./parts/_p-mv') %>
 
-  <!-- MV -->
+  <!-- メッセージ -->
   <%- include('./parts/_p-lead') %>
 
   <!-- ご参加いただくメリット -->
