--- a/_assets/ejs/parts/_c-request-btn.ejs
+++ b/_assets/ejs/parts/_c-request-btn.ejs
@@ -1,10 +1,9 @@
 <%# ボタン %>
-<div class="c-request-btn">
-  <%- include('./_c-btn',  {btn_text:'お申込みはこちら', btn_url:'#'}) %>
-</div>
+<%- include('./_c-modal-btn',  {class_name:'c-request-btn' ,btn_text:'お申込みはこちら'}) %>
+
 
 <p class="c-request-btn__annotation">
-  お問合せ後、担当者からご連絡させていただきます
+  お問合せ後、担当者から<br class="u-hidden-pc">ご連絡させていただきます
 </p>
 
 
