--- a/_assets/ejs/parts/_p-partner.ejs
+++ b/_assets/ejs/parts/_p-partner.ejs
@@ -1,20 +1,35 @@
-<div class="l-partner p-partner">
-  <div class="l-inner p-partner__wrapper">
-    <div class="p-partner__textbox">
-      <div class="p-partner__copy c-ecycle-copy">
-        <p>
-          <img src="../img/svg/logo.svg" alt="e.cycle">
-          千代田の
+<div id="partner" class="l-partner p-partner">
+  <div class="l-inner ">
+    <div class="p-partner__wrapper">
+      <div class="p-partner__textbox">
+        <div class="u-hidden-pc">
+          <div class="p-partner__copy c-ecycle-copy">
+            <p>
+              <img src="../img/svg/logo.svg" alt="e.cycle">
+            </p>
+            <p>
+              千代田の
+            </p>
+            <p>パートナー地域</p>
+          </div>
+        </div>
+        <div class="u-hidden-sp">
+          <div class="p-partner__copy c-ecycle-copy">
+            <p>
+              <img src="../img/svg/logo.svg" alt="e.cycle">
+              千代田の
+            </p>
+            <p>パートナー地域</p>
+          </div>
+        </div>
+        <p class="p-partner__text">
+          連携自治体の再エネ発電所の電気をまち未来製作所が集めて、電力会社に入札を行います。その売上の一部から地域活性化資金を創出し、具体的なプロジェクトを通して地域を元気にします。千代田区と連携自治体の再エネ発電所で、いい共生関係を築きます。
         </p>
-        <p>パートナー地域</p>
       </div>
-      <p class="p-partner__text">
-        連携自治体の再エネ発電所の電気をまち未来製作所が集めて、電力会社に入札を行います。その売上の一部から地域活性化資金を創出し、具体的なプロジェクトを通して地域を元気にします。千代田区と連携自治体の再エネ発電所で、いい共生関係を築きます。
-      </p>
-    </div>
-    <div class="p-partner__img">
-      <img src="../../img/common/japan_1.png" alt="e.cycle千代田パートナー地域">
-      <img src="../../img/common/japan_2.png" alt="e.cycle千代田パートナー地域">
+      <div class="p-partner__img">
+        <img src="../../img/common/japan_1.png" alt="e.cycle千代田パートナー地域">
+        <img src="../../img/common/japan_2.png" alt="e.cycle千代田パートナー地域">
+      </div>
     </div>
   </div>
 </div>
