--- a/_assets/ejs/parts/_p-request.ejs
+++ b/_assets/ejs/parts/_p-request.ejs
@@ -2,8 +2,7 @@
   <div class="l-inner p-request__wrapper">
     <div class="p-request__box">
       <p class="c-common-title font-color1">
-        地域を元気にする再エネを<br>
-        お得に使いましょう！
+        地域を元気にする<br class="u-hidden-pc">再エネを<br class="u-hidden-sp">お得に<br class="u-hidden-pc">使いましょう！
       </p>
       <%# ボタン %>
       <%- include('./_c-request-btn') %>
