--- a/_assets/scss/mixin/_form.scss
+++ b/_assets/scss/mixin/_form.scss
@@ -151,7 +151,7 @@ button {
 	// padding: 10px 30px;
 	// border: 1px solid #999;
 	// border-radius: 0;
-	-webkit-box-sizing: content-box;
+	-webkit-box-sizing: p-merit__contentbox;
 	-webkit-appearance: button;
 	appearance: button;
 	// background: #efefef;
