--- a/_assets/scss/object/layout/_l-footer.scss
+++ b/_assets/scss/object/layout/_l-footer.scss
@@ -5,6 +5,9 @@
 l-footer
 ----------------------------------- */
 
-.l-footer{
-  margin: -14rem 0 0;
-}
+// .l-footer{
+//   // margin: -14rem 0 0;
+//   @include sp{
+//     margin: 0;
+//   }
+// }
