--- a/_assets/ejs/parts/_p-lead.ejs
+++ b/_assets/ejs/parts/_p-lead.ejs
@@ -4,14 +4,14 @@
         再エネをお得に、地域のために
       </h2>
         <p class="p-lead__text">
-          「2050ゼロカーボンちよだ」実現に向け、<br>
-          連携自治体である秋田県五城目町、群馬県嬬恋村、岐阜県高山市の<br>
-          再エネ発電施設を活用し、千代田区内の事業者の皆様へ<br>
+          「2050ゼロカーボンちよだ」実現に向け、<br class="u-hidden-sp">
+          連携自治体である秋田県五城目町、群馬県嬬恋村、岐阜県高山市の<br class="u-hidden-sp">
+          再エネ発電施設を活用し、千代田区内の事業者の皆様へ<br class="u-hidden-sp">
           再生可能エネルギーの供給を行います。<br>
-          <br>
-          連携自治体の再エネ発電所のみなさま、<br>
-          電気を販売する小売電気事業者のみなさま、<br>
-          千代田区内の再エネ電力を活用したい事業者の<br>
+          <br class="u-hidden-sp">
+          連携自治体の再エネ発電所のみなさま、<br class="u-hidden-sp">
+          電気を販売する小売電気事業者のみなさま、<br class="u-hidden-sp">
+          千代田区内の再エネ電力を活用したい事業者の<br class="u-hidden-sp">
           みなさまの募集を開始いたします。
         </p>
     </div>
