--- a/_assets/ejs/parts/_p-merit.ejs
+++ b/_assets/ejs/parts/_p-merit.ejs
@@ -1,154 +1,55 @@
-<div class="section">
 
-  <div class="tabBox">
-    <div class="tabArea">
-      <div class="one_tab">
-        <a href="#tab01"><span class="tab_inner">Tab1</span></a>
-      </div>
-      <div class="one_tab">
-        <a href="#tab02"><span class="tab_inner">Tab2</span></a>
-      </div>
-      <div class="one_tab">
-        <a href="#tab03"><span class="tab_inner">Tab3</span></a>
-      </div>
-    </div>
-  </div><!-- /.tabBox -->
+<section class="p-merit">
+  <div class="l-inner">
+    <div id="merit" class="p-merit__inner">
+      <h2 class="c-common-title font-color3">
+        ご参加いただく<br class="u-hidden-pc">メリット
+      </h2>
 
-  <div class="contents">
-    
-    <div id="tab01" class="tab_main">
-      <div class="innerArea">Tab1 text</div>
-    </div><!-- /#tab01 -->
-    
-    <div id="tab02" class="tab_main">
-      <div class="innerArea">Tab2 text</div>
-    </div><!-- /#tab02 -->
-    
-    <div id="tab03" class="tab_main">
-      <div class="innerArea">Tab3 text</div>
-    </div><!--#tab03-->
-    
-  </div><!--contents-->
+      <div class="p-merit__wrapper">
 
-  <!-- ▼Tab under▼ -->
-  <div class="tabBox">
-    <div class="tabArea bottom">
-      <div class="one_tab">
-        <a href="#tab01"><span class="tab_inner">Tab1</span></a>
-      </div>
-      <div class="one_tab">
-        <a href="#tab02"><span class="tab_inner">Tab2</span></a>
-      </div>
-      <div class="one_tab">
-        <a href="#tab03"><span class="tab_inner">Tab3</span></a>
-      </div>
-    </div>
-  </div><!-- /.tabBox -->
+        <div class="p-merit__tabbox">
+          <ul class="p-merit__tabarea top">
+            <li class="p-merit__tab js-tab current">
+              千代田区内の<br class="u-hidden-sp">事業者のみなさま
+            </li>
+            <li class="p-merit__tab js-tab">
+              再エネ発電所の<br class="u-hidden-sp">みなさま
+            </li>
+            <li class="p-merit__tab js-tab">
+              小売電気事業者の<br class="u-hidden-sp">みなさま
+            </li>
+          </ul>
 
-  <p class="_a"><a href="https://125naroom.com/web/2854" target="_blank" class="link">View the note</a></p>
-</div>
+          <div class="p-merit__contents">
+            
+              <!-- tab01 -->
+              <%- include('./_p-merit_tab01') %>
+              <!-- tab02 -->
+              <%- include('./_p-merit_tab02') %>
+              <!-- tab03 -->
+              <%- include('./_p-merit_tab03') %>
 
+          </div><!--p-merit__contents-->
+      
 
-<!-- <div class="tab">
-  <ul class="tab-list">
-    <li class="tab-menu js-tab current">タブ1</li>
-    <li class="tab-menu js-tab">タブ2</li>
-    <li class="tab-menu js-tab">タブ3</li>
-  </ul>
-  <ul class="tab-list">
-    <li class="tab-menu js-tab current">タブ1</li>
-    <li class="tab-menu js-tab">タブ2</li>
-    <li class="tab-menu js-tab">タブ3</li>
-  </ul> -->
-  <!-- <div class="content-group">
-    <div class="content-box js-content">
-      <img
-        src="https://junpei-sugiyama.com/wp-content/uploads/2021/01/dog01.jpg"
-        alt=""
-      />
-    </div>
-    <div class="content-box js-content">
-      <img
-        src="https://junpei-sugiyama.com/wp-content/uploads/2021/01/dog02.jpg"
-        alt=""
-      />
-    </div>
-    <div class="content-box js-content">
-      <img
-        src="https://junpei-sugiyama.com/wp-content/uploads/2021/01/dog03.jpg"
-        alt=""
-      />
-    </div>
-  </div> -->
-</div>
-
-
-
-
-
-  <section class="p-merit">
-    <div class="l-inner">
-      <div class="p-merit__inner">
-        <h2 class="c-common-title font-color3">
-          ご参加いただくメリット
-        </h2>
-
-        <div class="p-merit__contents">
-          <div class="p-merit__chiyoda">
-            <%# メリット %>
-            <div class="p-merit__value p-value">
-              <h3 class="c-common-title font-color2">
-                お得で簡単、再エネ切替え！
-              </h3>
-              <%- include('./_p-value__list') %>
-            </div>
-            <div class="p-value__annotation">
-              <p>
-                ※1 RE100等の証明には再エネ指定の環境価値を示す証書を購入する必要があります。
-              </p>
-              <p>
-                ※2 入札によって価格は変動する可能性があります。
-              </p>
-              <p>
-                ※3 本事業では基本的にFIT電気を取扱います。
-              </p>
-              <br>
-              <p>
-                【留意事項】
-              </p>
-              <p>
-                ※本事業で使用する電気は基本的にFIT電気です。
-              </p>
-              <p>
-                【FIT電気】：FIT制度に基づき事業計画の認定を受けた事業に係る発電設備において発電された電気。
-              </p>
-              <p>
-                【FIT制度】：再生可能エネルギー源（太陽光、風力、水力、地熱、バイオマス）を用いて発電された電気を、国が定める価格で一定期間、電気事業者が買い取ることを義務付けるもの。（経済産業省資源エネルギー庁HP）
-              </p>
-              <p>
-                ※本事業で流通するFIT電気は、(1)FIT電気のみ (2)再エネ指定の環境価値を示す証書等により実質的に再生可能エネルギーによる電気としての価値を有するもの、両方を購入可能です。（この電気を調達する費用の一部は、電気の利用者が広く負担する賦課金によって賄われており、CO2が排出されないことを始めとする再生可能エネルギーとしての価値を訴求するにあたっては、国の制度上、非化石証書等の環境価値を取引する証書の使用が必要とされています。FIT電気は、環境価値を示す証書を使用しない場合には、CO２排出量について火力発電等も含めた全国平均の電気のCO2排出量を持った電気として扱われます。）
-              </p>
-            </div>
-
-            <%# STEP %>
-            <div class="p-merit__step p-step">
-              <h3 class="p-step__title">
-                再エネ切替えまでの4STEP
-              </h3>
-              <%- include('./_p-step__list') %>
-            </div>
-
-            <div class="p-merit__copy c-ecycle-copy">
-              <p>
-                <img src="../img/svg/logo.svg" alt="e.cycle">
-                の入札に参加して
-              </p>
-              <p>いい再エネを使おう！</p>
-            </div>
-            <%# ボタン %>
-            <%- include('./_c-request-btn') %>
-          </div>
+          <ul class="p-merit__tabarea bottom">
+            <li class="p-merit__tab js-tab current">
+              千代田区内の<br class="u-hidden-sp">事業者のみなさま
+            </li>
+            <li class="p-merit__tab js-tab">
+              再エネ発電所の<br class="u-hidden-sp">みなさま
+            </li>
+            <li class="p-merit__tab js-tab">
+              小売電気事業者の<br class="u-hidden-sp">みなさま
+            </li>
+          </ul>
         </div>
       </div>
+
+
+
+
     </div>
-  </section>
+  </div>
+</section>
