--- a/_assets/ejs/parts/_p-mv.ejs
+++ b/_assets/ejs/parts/_p-mv.ejs
@@ -1,9 +1,12 @@
   <section class="p-mv">
     <div class="p-mv__inner">
       <h2 class="p-mv__title">
-        <span>地域を元気にする</span>
-        <span>再エネをお得に</span>
+        <span>地域を元気にする</span><br>
+        <span>再エネをお得に</span><br>
         <span>使いましょう！</span>
       </h2>
     </div>
+    
+      <%- include('./_c-modal-btn',  {class_name:'p-mv__btn' ,btn_text:'ご参加<br class="u-hidden-sp">お申込みは<br class="u-hidden-sp">こちら'}) %>
+
   </section>
