--- a/_assets/ejs/parts/_p-value__list.ejs
+++ b/_assets/ejs/parts/_p-value__list.ejs
@@ -1,8 +1,9 @@
-<div class="p-value__list">
+<% var no = tab_no + 1; %>
+<div class="p-value__list p-value__list-<%- no %>">
   <% 
-    for (var i = 0; i < jsonData.valuelist.value.length; i++) { 
+    for (var i = 0; i < jsonData.valuelist.tab[tab_no].value.length; i++) { 
       var contents_no = i + 1;
   %> 
-    <%- include('./_c-contents' , {contents_title: jsonData.valuelist.value[i].title, contents_text:jsonData.valuelist.value[i].text, contents_no: contents_no, class_name:'p-value__contents'}) %>
+    <%- include('./_c-contents' , {contents_title: jsonData.valuelist.tab[tab_no].value[i].title, contents_text:jsonData.valuelist.tab[tab_no].value[i].text, contents_no: contents_no, class_name:'p-value__contents' }) %>
   <% } %>
 </div>
