--- a/_assets/scss/object/component/_c-contents-text.scss
+++ b/_assets/scss/object/component/_c-contents-text.scss
@@ -9,7 +9,10 @@ c-contents-text
   line-height: calc(24/14);
   letter-spacing: 0.05em;
   color:$font-color1;
-  padding-top: 3.1rem;
+  padding-top: 2.5rem;
+  @include sp{
+    padding-top: 2rem;
+  }
 }
 
 .c-contents-text span{
