--- a/_assets/scss/object/component/_c-pagetop.scss
+++ b/_assets/scss/object/component/_c-pagetop.scss
@@ -8,12 +8,17 @@ c-pagetop
   right: 3rem;
   width: 5rem;
   height: 5rem;
-  background: $bg-color2;
+  // background: $bg-color2;
+  background: linear-gradient(to bottom right, $bg-color2, $font-color2);
+  box-shadow: 0 0.4rem 0.4rem rgba(80, 80, 80, 0.2);
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.3s;
   a {
+    width: inherit;
+    height: inherit;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,4 +29,39 @@ c-pagetop
   @include sp {
     right: 1rem;
   }
+}
+
+
+.c-pagetop__arrow {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1;
+  position: relative;
+  width: 0.1rem;
+  height: 0.8rem;
+  background: currentColor;
+}
+
+.c-pagetop__arrow::before {
+  content: '';
+  width: 0.65rem;
+  height: 0.65rem;
+  // border: 0.1rem solid currentColor;
+  border: 0.1rem solid currentColor;
+  border-left: 0;
+  border-bottom: 0;
+  transform: rotate(-45deg);
+  transform-origin: top right;
+  position: absolute;
+  top: -0.05rem;
+  right: 50%;
+  box-sizing: border-box;
+}
+
+.c-pagetop a:hover{
+  color: rgba(216,216,216,0.3);
+}
+
+.c-pagetop:hover{
+  transform:translateY(-5px)
 }
