--- a/_assets/scss/object/layout/_l-partner.scss
+++ b/_assets/scss/object/layout/_l-partner.scss
@@ -6,5 +6,8 @@ l-partner
 ----------------------------------- */
 
 .l-partner{
-  margin: 10rem 0;
+  margin: -8rem 0;
+  @include sp{
+    margin: -4rem 0;
+  }
 }
