--- a/_assets/scss/object/project/_p-lead.scss
+++ b/_assets/scss/object/project/_p-lead.scss
@@ -5,24 +5,80 @@
 p-lead
 ----------------------------------- */
 .p-lead{
-  padding: 10rem 0 20.3rem;
+  padding: 10rem 0 max(18.3rem, 12.7vw);
+  // padding: 10rem 0 max(18.3rem, 18.3rem);
+  background:url(../../../img/common/intro.png);
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  
+  @include sp{
+    padding: 6rem 0 max(18.3rem, 12.7vw);
+    background-size: contain;
+    background: $bg-color7;
+    position: relative;
+  }
+}
+
+.p-lead::before{
+  @include sp{
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:linear-gradient(rgba(0,158,140,0) 0%, rgba(0,158,140,1) 50%, rgba(0,158,140,1));
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+
+.p-lead::after{
+  @include sp{
+    content:"";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 20.8rem;
+    background:url(../../../img/common/wh.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+  }
 }
 
 .p-lead__inner{
   color: $font-color3;
   text-align: center;
   letter-spacing: 0.04em;
+  position: relative;
+  z-index: 2;
+  @include sp{
+    text-align: left;
+  }
 }
 
 .p-lead__title{
   font-size: 4.8rem;
   font-weight: 700;
   line-height: 1.5;
+  @include sp{
+    font-size: 3.8rem;
+    line-height: 1.684;
+  }
 }
 
 .p-lead__text{
-  margin-top: 4rem;
+  margin-top: 3.4rem;
   font-size: 2rem;
   font-weight: 700;
   line-height: 2.2;
+  @include sp{
+    font-size: 1.8rem;
+    line-height: 1.89;
+    margin-top: 1rem;
+  }
 }
