--- a/_assets/scss/object/project/_p-merit.scss
+++ b/_assets/scss/object/project/_p-merit.scss
@@ -1,132 +1,274 @@
 @use '../..//mixin/mixin' as *;
 @use '../../setting/setting' as *;
 
-
-
-
-.tabBox .tabArea {
-  width: 100%;
-  height: 80px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-.tabBox .tabArea .one_tab {
-  width: 32.5%;
-}
-.tabBox .tabArea .one_tab a {
-  display: block;
-  text-decoration: none;
-  transition-duration: 0.3s;
-  text-align: center;
-  color: #fff;
-}
-.tabBox .tabArea .one_tab a:hover {
-  opacity: 0.7;
-  text-decoration: none;
-}
-.tabBox .tabArea .one_tab .tab_inner {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60px;
-  transition-duration: 0.3s;
-}
-.tabBox .tabArea .one_tab:nth-child(1) .tab_inner {
-  background-color: #94ad73;
-}
-.tabBox .tabArea .one_tab:nth-child(2) .tab_inner {
-  background-color: #e6de6b;
-}
-.tabBox .tabArea .one_tab:nth-child(3) .tab_inner {
-  background-color: #e8a48b;
-}
-.tabBox .tabArea .one_tab a.select .tab_inner {
-  height: 80px;
-}
-.tabBox .tabArea.bottom {
-  align-items: flex-start;
-}
-.contents .tab_main {
-  display: none;
-  padding: 50px 25px;
-  text-align: center;
-  min-height: 280px;
-  border: 2px solid #94ad73;
-  transition-duration: 0.3s;
-}
-.tab_main.is_show {
-  display: block;
-}
-.tab_main:nth-child(1).is_show {
-  border: 2px solid #94ad73;
-}
-.tab_main:nth-child(2).is_show {
-  border: 2px solid #e6de6b;
-}
-.tab_main:nth-child(3).is_show {
-  border: 2px solid #e8a48b;
-}
-
-
-
-
-
-// .tab {
-//   margin-left: auto;
-//   margin-right: auto;
-//   margin-top: 30px;
-//   max-width: 300px;
-//   width: 100%;
-// }
-// .tab-list {
-//   display: flex;
-// }
-// .tab-menu {
-//   align-items: center;
-//   background-color: #ccc;
-//   color: #fff;
-//   cursor: pointer;
-//   display: flex;
-//   flex-grow: 1;
-//   height: 50px;
-//   justify-content: center;
-// }
-// .tab-menu.current {
-//   background-color: #85746c;
-// }
-// .content-box {
-//   background-color: #ccc;
-//   display: none;
-//   max-width: 500px;
-//   width: 100%;
-// }
-// .content-box img {
-//   display: block;
-//   height: auto;
-//   width: 100%;
-// }
-
-
-
-
-
 /* --------------------------------
 p-merit
 ----------------------------------- */
 
-.p-merit__inner{
+.p-merit{
+  position: relative;
+  z-index: -1;
+  background: linear-gradient($bg-color2, $bg-color6);
+  // padding-top: max(13rem, 30vw);
+  padding-top: max(13rem, 21vw);
+  padding-bottom: max(13rem, 30vw);
+  @include sp{
+    padding-bottom: min(21rem,40vw);
+  }
+}
+// .p-merit::before{
+//   @include sp{
+//     content: "";
+//     top: -10px;
+//     left: 0;
+//     position: absolute;
+//     width: 100vw;
+//     height: 12rem;
+//     transform: scale(1, -1);
+//     background:url(../../../img/common/wh.png);
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//     background-position: top;
+//   }
+// }
+
+.p-merit__contentbox{
   width: 62rem;
   max-width: 100%;
   margin: 0 auto;
+  display: none;
 }
 
 .p-merit__copy{
   margin-top: 9rem;
+  @include sp{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4rem;
+  }
 }
 
 .p-merit__copy p{
+  display: flex;
   justify-content: center;
+  align-items: center;
+  // display: inline;
+  // display: block;
+  @include sp{
+    font-size: 2.4rem;
+  }
 }
 
+.p-merit__copy img{
+  @include sp{
+    width: 14.769rem;
+  }
+}
+
+.p-merit__tabarea{
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  display: flex;
+  position: relative;
+}
+
+.p-merit__tabarea.top{
+  @include sp{
+    @include sp{
+      display: block;
+      padding: 0 2rem 1.8rem;
+      border-bottom: 2px solid $border-color2;
+    }  
+  }
+}
+.p-merit__inner{
+  // border: none;
+  // @include max(99999){
+    position: relative;
+  // }
+}
+.p-merit__inner::before{
+  // @include max(9999){
+    content: "";
+    background: url(../../../img/common/white-top.png);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100vw;
+    height: 55.56vw;
+    z-index: -1;
+    background-size:cover;
+    background-position:bottom;
+    top: -39vw;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 1px solid #009E8C;
+  // }
+}
+
+.p-merit__inner::after{
+  // @include max(1200){
+    content: "";
+    background: url(../../../img/common/white-bottom.png);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100vw;
+    height: 55.56vw;
+    z-index: -1;
+    background-size:contain;
+    background-position:top;
+    background-repeat: no-repeat;
+    bottom: -51.5vw;
+    box-sizing: border-box;
+    border-top: 1px solid $border-color1;
+  // }
+  @include sp{
+    // background-position:bottom;
+    // background-size: cover;
+    bottom: -74.5vw;
+  }
+}
+.p-merit__tabarea.bottom{
+  @include sp{
+    padding: 1.3rem 2rem 0;
+  }
+}
+
+.p-merit__tabarea.bottom::after{
+  content: "";
+  background: url(../../../img/common/white-bottom.png);
+  position: absolute;
+  top: 9.6rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100vw;
+  height: 55.56vw;
+  // width: 1440px;
+  // height: 800px;
+  // overflow: hidden;
+  z-index: -1;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  display: none;
+}
+
+.p-merit__tab{
+  width: 31.915%;
+  // color: $font-color1;
+  color: $font-color1-op;
+  // opacity: 0.5;
+  background: $bg-color4;
+  display: block;
+  text-align: center;
+  padding: 3.5rem 0;
+  font-size: 2.6rem;
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  line-height: 1.3;
+  position: relative;
+  z-index: 10000;
+  cursor: pointer;
+  transition: all 0.3s;
+  box-sizing: border-box;
+  @include sp{
+    width: 100%;
+    font-size: 1.8rem;
+    background: $bg-color1;
+    padding: 1.8rem 0;
+    margin-top: 1rem;
+    border: 1px solid $border-color2;
+  }
+}
+
+.p-merit__tab:first-of-type{
+  @include sp{
+    margin-top: 0;
+  }
+}
+
+
+.p-merit__tab:hover{
+  color: $font-color2;
+}
+
+.p-merit__tab.current{
+  display: block;
+  color: $font-color2;
+  background: $bg-color1;
+  position: relative;
+  @include sp{
+    color: $font-color3;
+    background: $bg-color6;
+    border: none;
+  }
+}
+
+.p-merit__tab::after,
+.p-merit__tab.current::after{
+  content: "";
+  display: block;
+  position: absolute;
+  border: 2px solid $border-color1;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 75%;
+}
+
+.p-merit__tab.current::after{
+  opacity: 1;
+}
+
+.p-merit__tab::after{
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.p-merit__tab:hover::after{
+opacity: 1;
+}
+
+.p-merit__tabarea.top .p-merit__tab{
+  border-radius: 2rem 2rem 0 0;
+  @include sp{
+    border-radius: 1rem;
+  }
+}
+
+.p-merit__tabarea.bottom .p-merit__tab{
+  border-radius: 0 0 2rem 2rem;
+  @include sp{
+    border-radius: 1rem;
+  }
+}
+
+.p-merit__tabarea.top .p-merit__tab::after{
+  bottom: 0;  
+}
+
+.p-merit__tabarea.bottom .p-merit__tab::after{
+  top: 0;  
+}
+
+.p-merit__contents{
+  background: $bg-color1;
+  padding: 8rem 2rem;
+  @include sp{
+    padding: 4rem 2rem;
+  }
+}
+
+.p-merit__wrapper{
+  width: 100%;
+  margin-top: 8rem;
+  @include sp{
+    background: $bg-color1;
+    padding: 2rem 0;
+    border-radius: 2rem;
+    margin-top: 4rem;
+  }
+}
