--- a/_assets/scss/object/project/_p-partner.scss
+++ b/_assets/scss/object/project/_p-partner.scss
@@ -4,28 +4,43 @@
 /* --------------------------------
 p-partner
 ----------------------------------- */
-
+// .p-partner{
+//   display: flex;
+// }
 .p-partner__inner{
   // position: relative;
 }
 .p-partner__wrapper{
   margin-top: 9rem;
   display: flex;
+  @include sp{
+    flex-direction: column;
+  }
 }
 
 .p-partner__textbox{
   width: 38rem;
   max-width: 100%;
-
+  @include sp{
+    margin-top: 4.3rem;
+  }
+}
+.p-partner__copy p{
+  @include sp{
+    display: block;
+  }
 }
 
-.p-partner__copy{
+.p-partner__copy img{
+  @include sp{
+    width: 20.6rem;
+  }
 }
-
 .p-partner__text{
   font-size: 1.6rem;
   line-height: 1.75;
   letter-spacing: 0.05em;
+  padding-top: 2.8rem;
 }
 
 .p-partner__img{
@@ -34,6 +49,15 @@ p-partner
   max-width: 100%;
   height: 61rem;
   margin-left: -25.8rem;
+  @include sp{
+    display: block;
+    margin: initial;
+    // margin-right: calc(50% - 50vw);
+    margin-left: calc(50% - 50vw);
+    height: 118.667vw;
+    width: 100vw;
+    max-width: initial;
+  }
 }
 
 .p-partner__img img{
@@ -42,6 +66,8 @@ p-partner
   position: absolute;
   top: 0;
   right: 0;
+  object-fit: cover;
+  object-position: 85% 50%;
 }
 
 
