--- a/_assets/ejs/parts/_p-header-menu.ejs
+++ b/_assets/ejs/parts/_p-header-menu.ejs
@@ -6,7 +6,7 @@
               <% if (page === 'about') { %>
                 <!-- li1 -->
                 <li>
-                  <a href="<%= jsonData.pages[page].slug %>"><img src="../img/svg/logo.svg" alt="e.cycle">とは
+                  <a href="<%= jsonData.pages[page].slug %>"><img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">とは
                   </a>
                 <!-- /li1 -->
                 </li>
