--- a/_assets/ejs/parts/_p-partner.ejs
+++ b/_assets/ejs/parts/_p-partner.ejs
@@ -5,7 +5,7 @@
         <div class="u-hidden-pc">
           <div class="p-partner__copy c-ecycle-copy">
             <p>
-              <img src="../img/svg/logo.svg" alt="e.cycle">
+              <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
             </p>
             <p>
               千代田の
@@ -16,7 +16,7 @@
         <div class="u-hidden-sp">
           <div class="p-partner__copy c-ecycle-copy">
             <p>
-              <img src="../img/svg/logo.svg" alt="e.cycle">
+              <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
               千代田の
             </p>
             <p>パートナー地域</p>
@@ -27,8 +27,8 @@
         </p>
       </div>
       <div class="p-partner__img">
-        <img src="../../img/common/japan_1.png" alt="e.cycle千代田パートナー地域">
-        <img src="../../img/common/japan_2.png" alt="e.cycle千代田パートナー地域">
+        <img class="lazyload" src="../../img/common/japan_1.png" alt="e.cycle千代田パートナー地域">
+        <img class="lazyload" src="../../img/common/japan_2.png" alt="e.cycle千代田パートナー地域">
       </div>
     </div>
   </div>
