--- a/_assets/ejs/common/_footer.ejs
+++ b/_assets/ejs/common/_footer.ejs
@@ -2,7 +2,7 @@
   <div class="p-footer__inner">
     <a href="./" class="p-footer__logo">
       <p>
-        <img src="../../img/common/footer-logo.svg" alt="いいサイクル千代田">
+        <img class="lazyload" src="../../img/common/footer-logo.svg" alt="いいサイクル千代田">
       </p>
     </a>
     <div class="p-footer__nav-wrapper">
@@ -28,7 +28,7 @@
 </footer>
 <div id="pagetop" class="c-pagetop">
   <a href="#wrapper">
-  <!-- <img src="../../img/svg/arrow-down-solid.svg" alt=""> -->
+  <!-- <img class="lazyload" src="../../img/svg/arrow-down-solid.svg" alt=""> -->
   <span class="c-pagetop__arrow"></span>
   Top</a>
 </div>
