--- a/_assets/ejs/parts/_p-merit_tab03.ejs
+++ b/_assets/ejs/parts/_p-merit_tab03.ejs
@@ -11,14 +11,14 @@
     <div class="p-merit__copy c-ecycle-copy">
       <div class="u-hidden-sp">
         <p>
-          <img src="../img/svg/logo.svg" alt="e.cycle">
+          <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
           の入札に参加して
         </p>
         <p>いい再エネを使おう！</p>
       </div>
       <div class="u-hidden-pc">
         <p>
-          <img src="../img/svg/logo.svg" alt="e.cycle">
+          <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
           の
         </p>
         <p>入札に参加して</p>
